ECL 9.12.4:
===========

* Bugs fixed:

 - DIRECTORY used stat() also on files that did not match the directory masks.

 - The syntax for matching strings in DIRECTORY is now the same as in
   PATHNAME-MATCH-P. Formerly there were small differences, the forming
   understanding characters #\? and #\\

ECL 9.12.3:
===========

* Visible changes:

 - When converting rationals to floats, ECL now rounds instead of using the
   routine in GMP, which truncates.

 - LOAD open streams in buffered mode. It does not cause any significant
   performance increase except in broken network filesystems that lack
   buffering such as some implementations of NFS.

ECL 9.12.2:
===========

* Bugs fixed:

 - RANDOM broken on 64-bits architectures.

 - The debugger now shows the package names of inspected variables.

 - The code in CLX that dealt with interrupts had become outdated.

* Other changes:

 - Methods now show up in the debugger with their original name.

 - Enlarged the string buffers used for reading and parsing lisp data.

ECL 9.12.1:
===========

* Platform support:

 - Support for Itanium.

 - Support for Solaris and SunStudio compiler.

 - Support for Microsoft Visual Studio C++ 10 beta.

 - Support for Cygwin.

* Visible changes:

 - New function EXT:ARRAY-RAW-DATA returns a non-adjustable vector of type
   (UNSIGNED-BYTE 8) with the content of an array. The returned array overlaps
   with the original, so any change on one will affect the other.

 - LOAD works on special files (/dev/null and the like).

 - New command line option --version outputs the version number preceded
   by the implementation name ("ECL 9.11.1" in this particular release).

 - MULTIPLE-VALUE-BIND is optimally replaced with a LET form when the number
   of variables is 1.

 - ECL now accepts Windows' UNC pathnames.
    (with-open-file (s #P"//JUANJO-IMAC/Public Folder/index.html"
                       :direction :input)
      (loop for l = (read-line s nil nil)
            while l