@@ -105,9 +105,10 @@ Returns, as a string, the version of the software under which ECL runs."
 ;;   Otherwise it would not be a directory.
 ;;
 #-ecl-min
-(progn
-  (si::pathname-translations "SYS"
-			     `(("**;*.*" ,(merge-pathnames "**/*.*" (si::get-library-pathname)))))
+(let ((path (si::get-library-pathname)))
+  (when path
+    (si::pathname-translations "SYS"
+                               `(("**;*.*" ,(merge-pathnames "**/*.*" path )))))
 );#-eclmin
 #-msvc
 (si::pathname-translations "HOME" '(("**;*.*" "~/**/*.*")))
